2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Remove obsolete entry for no_NO
	* po/no.po: And the translation

2006-03-17  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.c: Check to see whether credentials
	are renewable; if so, renew them automatically.  Implement this
	for the MIT implementation only.  (Fixes #331210)

	* configure.ac: Add test to see whether we have krb5_get_renewed_creds

2006-02-01  Nalin Dahyabhai <nalin@redhat.com>
	* src/krb5-auth-dialog.c: keep track of whether or not the user
	explicitly canceled our last request for information.  If she did,
	then don't ask again while the expiration time remains unchanged.
	Change recursion inside of renew_credentials() into a loop in its
	calling function.

2006-02-01  Nalin Dahyabhai <nalin@redhat.com>
	* src/krb5-auth-dialog.c(krb5_gtk_prompter): rename to avoid polluting
	the krb5 namespace.
	* src/krb5-auth-dialog.c: don't use time() to figure out what time it
	is -- we always compare against a krb5_timestamp, so use the libkrb5
	routines which return the current time instead.

2006-02-01  Nalin Dahyabhai <nalin@redhat.com>
	* README: correct a typo
	* src/krb5-auth-dialog.c(renew_credentials): fix a warning where we
	were passing an int where a pointer was expected

2006-01-31  Christopher Aillon  <caillon@redhat.com>

	* configure.ac: Release 0.6

2006-01-31  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.desktop.in:
	Add desktop file for autostart

	* krb5-auth-dialog.spec.in:
	* src/Makefile.am:
	Install desktop file to the correct location

	* src/.cvsignore: Add generated file

2006-01-31  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.glade: Don't explicitly
	set the invisible_char to '*', get it from GTK+

2005-11-08  Christopher Aillon  <caillon@redhat.com>

	* configure.ac: Release 0.5

2005-11-03  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.c: Consolidate how we figure out the
	expiry text